[gd_scene load_steps=3 format=3 uid="uid://c3wrcre1ryiin"]

[ext_resource type="Script" path="res://addons/ai_assistant_hub/new_ai_assistant_type_window.gd" id="1_iekrh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a3a21"]
bg_color = Color(0.21, 0.24, 0.29, 1)

[node name="NewAIAssistantTypeWindow" type="Window"]
title = "New AI Assistant Type"
initial_position = 2
size = Vector2i(800, 500)
script = ExtResource("1_iekrh")

[node name="Background" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a3a21")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 8
columns = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Assistant type name"
horizontal_alignment = 2

[node name="NameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "The assistant type, e.g. Coder, Writer..."

[node name="PromptLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Assistant description
(prompt)"
horizontal_alignment = 2

[node name="PromptTextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "You are a useful Godot AI assistant."
placeholder_text = "Give a description for the assistant. This will dictate its behavior. E.g.
\"You are a useful assistant for game development, expert in the Godot engine\"."
wrap_mode = 1

[node name="APILabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "API class
"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="APILineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "AI provider class, e.g. ollama_api"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "If empty it will use the selected in the AI Hub tab."
autowrap_mode = 3

[node name="ModelLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "AI Model"
horizontal_alignment = 2

[node name="ModelLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "AI model used by this assistant type"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxCreateButton" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="CreateNoteLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxCreateButton"]
unique_name_in_owner = true
layout_mode = 2
text = "NOTE: This will create a resource under %s using the name below.
- Once created, double click it to edit its configuration, including all values above.
- You can also add an icon and other properties there.
- You can delete the assistant type by deleting the resource file."
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxCreateButton"]
layout_mode = 2

[node name="ResNameLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxCreateButton/HBoxContainer"]
layout_mode = 2
text = "Resource name "

[node name="ResNameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/VBoxCreateButton/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxCreateButton/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
disabled = true
text = "Create"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/GridContainer/NameLineEdit" to="." method="_on_name_line_edit_text_changed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/VBoxCreateButton/HBoxContainer/ResNameLineEdit" to="." method="_on_res_name_line_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxCreateButton/HBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
